--- a/public/style.css
+++ b/public/style.css
@@ -2,23 +2,184 @@ body {
   font-family: sans-serif;
   margin: auto;
   max-width: 1280px;
+  --couleur1: #542259;
+  --couleur2: #8F5AFF;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  width: 100%;
+  height: 100%;
 }
 
-.navbar {
-  background-color: #313236;
-  border-radius: 2px;
-  max-width: 800px;
+.circle {
+  position: absolute;
+  z-index: 1;
+  content: " ";
+  height: 30vh;
+  width: 30vh;
+  border-radius: 50%;
 }
 
-.navbar a {
-  color: #aaa;
-  display: inline-block;
-  font-size: 15px;
-  padding: 10px;
-  text-decoration: none;
+.circle1 {
+  transform: rotate(45deg);
+  top: 5vh;
+  right: 10%;
+  /* dégradé */
+  background: var(--couleur1); /* fallback color if gradients are not supported*/ 
+  background: -webkit-linear-gradient(var(--couleur1), var(--couleur2));
+  background: -moz-linear-gradient(var(--couleur1), var(--couleur2));
+  background: -o-linear-gradient(var(--couleur1)), var(--couleur2));
+  background: linear-gradient(var(--couleur1), var(--couleur2));
 }
 
-.navbar a:hover {
-  color: #ffffff;
+.circle2 {
+  transform: rotate(45deg);
+  z-index: -1;
+  top: 25vh;
+  left: 5vh;
+  background: linear-gradient(
+  to bottom,
+  #00000000,
+  #5d963400 70%,
+  #000000 50%
+  );
+  background-size: 100% 30px;
 }
 
+#presentation {
+  position: absolute;
+  padding: 2vh;
+  left: 10vw;
+  top: 45vh;
+  background-color: rgb(241, 241, 241);
+  width: 40%;
+  height: auto;
+  padding: 3vh;
+}
+#presentation p {
+  font-size: 2em;
+}
+#presentation a {
+  color: rgb(221, 221, 221);
+  padding: 1.25vh;
+  margin: 2vh;
+  border-radius: 25px;
+  font-size: 2em;
+  
+  background: var(--couleur1); /* fallback color if gradients are not supported*/ 
+  background: linear-gradient(to right, var(--couleur1), var(--couleur2));
+}
+
+
+.img {
+  position: absolute;
+  top: 15vh;
+  left: 20vw;
+  z-index: 0;
+  height: 60vh;
+  width: 60vw;
+
+  background-image: url("Medias/bg1.jpg");
+}
+
+h1 {
+  font-size: 72px;
+  background: -webkit-linear-gradient(var(--couleur1), var(--couleur2));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 45px;
+  margin: 1vh;
+}
+
+
+.ocean { 
+  height: 5%;
+  width: 105vw;
+  position:absolute;
+  bottom:-100px;
+  left:0;
+  background-color: #BA65FE;
+}
+
+.wave {
+  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/85486/wave.svg) repeat-x; 
+  filter: invert(34%) sepia(97%) saturate(1642%) hue-rotate(238deg) brightness(100%) contrast(102%);
+  position: absolute;
+  top: -198px;
+  width: 6400px;
+  height: 198px;
+  animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) infinite;
+  transform: translate3d(0, 0, 0);
+}
+
+.wave:nth-of-type(2) {
+  top: -175px;
+  animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) -.125s infinite, swell 7s ease -1.25s infinite;
+  opacity: 1;
+}
+
+@keyframes wave {
+  0% {
+    margin-left: 0;
+  }
+  100% {
+    margin-left: -1600px;
+  }
+}
+
+@keyframes swell {
+  0%, 100% {
+    transform: translate3d(0,-25px,0);
+  }
+  50% {
+    transform: translate3d(0,5px,0);
+  }
+}
+
+
+
+
+
+
+a{
+  padding:30px;
+  margin:2%;
+  background:white;
+  width:30%;
+  border:1px solid #d6d6d6;
+  box-shadow:0 2px 3px 0px rgba(0,0,0,0.25);
+  border-radius:3px;
+  transition:.2s all; 
+  box-shadow:0 8px 20px 0px rgba(0,0,0,0.45);
+}
+
+a:hover{
+  transform:scale(1);
+  filter:blur(0px);
+  opacity:0.8;
+  box-shadow:0 0px 0px 0px rgba(0,0,0,0.45);
+  
+}
+
+
+
+#loader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -10;
+  opacity: 0;
+  width: 105vw;
+  height: 100vh;
+  background-color: white;
+  animation: load 1.5s;
+}
+
+@keyframes load {
+  0%, 50% {
+    opacity: 1;
+    z-index: 10;
+  }
+  70% {
+    opacity: 0;
+  }
+}
