--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,18 @@
+html {
+  scroll-behavior: smooth;
+  scrollbar-width: none;  /* Firefox */
+}
+::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   font-family: sans-serif;
   margin: auto;
-  max-width: 1280px;
   --couleur1: #542259;
   --couleur2: #8F5AFF;
   overflow-x: hidden;
-  overflow-y: hidden;
-  width: 100%;
-  height: 100%;
 }
-
 .circle {
   position: absolute;
   z-index: 1;
@@ -58,6 +61,7 @@ body {
   padding: 1.25vh;
   border-radius: 25px;
   font-size: 2em;
+  text-decoration: none;
   
   background: var(--couleur1); /* fallback color if gradients are not supported*/ 
   background: linear-gradient(to right, var(--couleur1), var(--couleur2));
@@ -84,6 +88,41 @@ h1 {
   font-size: 45px;
   margin: 1vh;
 }
+h2 {
+  font-size: 52px;
+  background: -webkit-linear-gradient(var(--couleur1), var(--couleur2));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 45px;
+  margin: 1vh;
+  padding: 2vh;
+}
+#clac1 {
+  position: absolute;
+  bottom: 10vh;
+}
+
+#calc {
+  width: 100%;
+  height: 50vh;
+  position: relative;
+  top: 105vh;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  background-color: #6C4DB4;
+  height: 100vh;
+}
+
+#first {
+  height: 100vh;
+}
+
+section article {
+  width: 80%;
+  height: 80%;
+  background-color: rgb(241, 241, 241);
+}
 
 
 .ocean { 
@@ -92,7 +131,7 @@ h1 {
   position:absolute;
   bottom:-100px;
   left:0;
-  background-color: #BA65FE;
+  background-color: #704ea7;
 }
 
 .wave {
@@ -158,7 +197,7 @@ a:hover{
 
 
 #loader {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: -10;
@@ -284,4 +323,21 @@ a:hover{
   100% {
     transform: rotate(360deg);
   }
+}
+
+
+
+
+#questions {
+  padding: 3vh;
+  padding-top: 0;
+  font-size: 30px;
+}
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
 }
