--- a/public/style.css
+++ b/public/style.css
@@ -66,6 +66,17 @@ body {
   background: var(--couleur1); /* fallback color if gradients are not supported*/ 
   background: linear-gradient(to right, var(--couleur1), var(--couleur2));
 }
+.HOVER2 {
+  color: rgb(221, 221, 221);
+  padding: 1.25vh;
+  margin: 2vh;
+  border-radius: 25px;
+  font-size: 1em;
+  text-decoration: none;
+  
+  background: var(--couleur1); /* fallback color if gradients are not supported*/ 
+  background: linear-gradient(to right, var(--couleur1), var(--couleur2));
+}
 
 
 .img {
@@ -104,14 +115,13 @@ h2 {
 
 #calc {
   width: 100%;
-  height: 50vh;
+  height: 75vh;
   position: relative;
   top: 105vh;
   left: 0;
   display: flex;
   justify-content: center;
   background-color: #6C4DB4;
-  height: 100vh;
 }
 
 #first {
@@ -120,8 +130,9 @@ h2 {
 
 section article {
   width: 80%;
-  height: 80%;
+  height: fit-content;
   background-color: rgb(241, 241, 241);
+  border-radius: 20px;
 }
 
 
@@ -131,7 +142,11 @@ section article {
   position:absolute;
   bottom:-100px;
   left:0;
-  background-color: #704ea7;
+  background-color: #6C4DB4;
+}
+.ocean2 {
+  top: 175vh;
+  transform: rotate(180deg);
 }
 
 .wave {
@@ -334,10 +349,14 @@ a:hover{
   font-size: 30px;
 }
 
-input[type=text], select, textarea {
-  width: 100%;
+input[type=text], input[type=number], select, textarea {
+  width: auto;
   padding: 12px;
   border: 1px solid #ccc;
   border-radius: 4px;
   resize: vertical;
+  font-size: 20px;
+}
+input[type=number] {
+  width: 5vh;
 }
